--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="text-white top-0 gap-4 absolute z-50 w-full flex justify-end px-2 py-2 bg-slate-900 shadow-md">
-  <a routerLink="/about" [routerLinkActive]="'text-blue-500'">About</a>
-  <a routerLink="/price" [routerLinkActive]="'text-blue-500'">Price</a>
-  <a routerLink="/contact" [routerLinkActive]="'text-blue-500'">Contact</a>
+<nav class="text-white top-0 absolute z-50 w-full flex flex-col items-end gap-2 px-4 py-3 bg-slate-900 shadow-md md:flex-row md:justify-end md:gap-4 md:px-2 md:py-2">
+  <a routerLink="/about" routerLinkActive="text-blue-500" class="block w-full text-right md:w-auto md:inline-block">About</a>
+  <a routerLink="/price" routerLinkActive="text-blue-500" class="block w-full text-right md:w-auto md:inline-block">Price</a>
+  <a routerLink="/contact" routerLinkActive="text-blue-500" class="block w-full text-right md:w-auto md:inline-block">Contact</a>
 </nav>
